# homesense

./: .gitignore  ANDROID_SETUP_GUIDE.md  API_REFERENCE.md  BACKEND_PLAN.md  FRONTEND_PLAN.md  HOMESENSE_CONTEXT.md  README.md  pubspec.yaml
FlutterApp/: .flutter-plugins-dependencies  .gitignore  BACKEND_INTEGRATION.md  README.md  pubspec.yaml
FlutterApp/.dart_tool/: package_config.json  package_graph.json
FlutterApp/android/: local.properties
FlutterApp/android/app/: build.gradle.kts
FlutterApp/assets/icon/: README.txt
FlutterApp/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
FlutterApp/lib/: main.dart
FlutterApp/web/: index.html
android/: local.properties
backend/: .env.example  ARCHITECTURE.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: calibration.py  centroids.py  events.py  health.py  infer.py  insights.py  suggest.py
backend/app/core/: config.py
backend/app/db/: crud.py  init_db.py  models.py  session.py
backend/app/schemas/: calibration.py  centroids.py  common.py  events.py  infer.py  insights.py  suggest.py
backend/app/services/: centroid.py  classifier.py  insights.py  llm.py
frontend/: .env.example  README.md  app.py  requirements.txt
frontend/pages/: 01_🏁_Backend_Status.py  02_⚙️_Config_Beacon_Order.py  03_📥_Calibration_Upload_and_Fit.py  04_🧲_Centroids_Viewer.py  05_🔮_Live_Inference_and_Suggest.py  06_📊_Daily_Insights.py
frontend/samples/: calibration_windows.json  inference_windows.json
frontend/utils/: api.py  data.py  state.py  ui.py
(+25 files in other folders)
