[tool.poetry]
name = "homesense-api"
version = "1.0.0"
description = "HomeSense FastAPI backend for indoor positioning"
authors = ["HomeSense Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.25.0"
orjson = "^3.9.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
